Changing border color and size simultaneously fails to repaint. https://bugs.webkit.org/show_bug.cgi?id=157967 <rdar://problem/26423918>

Reviewed by David Hyatt.

This patch ensures that the neighboring tables cells are dirtied when collapsed border change requires layout.

Source/WebCore:

Test: fast/table/neighboring-cells-when-collapsed-border-changes.html

* rendering/RenderTable.cpp:
(WebCore::markCellDirtyWhenCollapsedBorderChanges):
(WebCore::RenderTable::invalidateCollapsedBorders):

LayoutTests:

* fast/table/neighboring-cells-when-collapsed-border-changes-expected.html: Added.
* fast/table/neighboring-cells-when-collapsed-border-changes.html: Added.


Canonical link: https://commits.webkit.org/176112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201296 268f45cc-cd09-0410-ab3c-d52691b4dbfc